objects/Highlight_Lowlight__c.object
<CustomObject>
    <description>is used for structured highlight / lowlight reporting on accounts, opportunities  contacts and other objects</description>
    <fields>
        <fullName>Account_Manager__c</fullName>
        <formula>Account_Name__r.Account_Manager_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>shows the account name</description>
        <label>Account Name</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordType.Id</field>
                <operation>notEqual</operation>
                <value>012E0000000e2DnIAI</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Highlights / Lowlights</relationshipLabel>
        <relationshipName>Highlights_Lowlights</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Competitor_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>look up to the accounts object to reference accounts of record type competitor</description>
        <label>Competitor Name</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Competitor</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Highlights / Lowlights (Competitor Name)</relationshipLabel>
        <relationshipName>Highlights_Lowlights1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Created_by_BU__c</fullName>
        <formula>TEXT( CreatedBy.Sub_Vertical__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created by BU</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created_by_Region__c</fullName>
        <formula>TEXT( CreatedBy.Region__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created by Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GAM_Code__c</fullName>
        <formula>Account_Name__r.GAMCD__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GAM Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GAM_Name__c</fullName>
        <formula>Account_Name__r.GAMDESC__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GAM Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Important_for__c</fullName>
        <description>to select the audience this Higlight / Lowlight is important for</description>
        <inlineHelpText>select the audience this Higlight / Lowlight is esspecially important for</inlineHelpText>
        <label>Important for</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Next Level Manager</fullName>
                    <default>true</default>
                    <label>Next Level Manager</label>
                </value>
                <value>
                    <fullName>Sub Vertical Management</fullName>
                </value>
                <value>
                    <fullName>Industrial Executive Management</fullName>
                </value>
                <value>
                    <fullName>Global Sales Management</fullName>
                </value>
                <value>
                    <fullName>Engineering Management</fullName>
                </value>
                <value>
                    <fullName>Product Management</fullName>
                </value>
                <value>
                    <fullName>Industry Marketing</fullName>
                </value>
                <value>
                    <fullName>Channel Management</fullName>
                </value>
                <value>
                    <fullName>Global Account Management</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>News_Number_1__c</fullName>
        <description>creates an auto number with date and number to be converted in  a Number field by fomula.</description>
        <displayFormat>{YYYY}-{MM}-{DD}-#{0}</displayFormat>
        <label>Auto Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>News_Number_Value__c</fullName>
        <formula>Value( News_Number_1__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>News #</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>News_Type__c</fullName>
        <label>News Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Market / Competitor news</fullName>
                </value>
                <value>
                    <fullName>Great Place to Work</fullName>
                </value>
                <value>
                    <fullName>Employee of the week</fullName>
                </value>
                <value>
                    <fullName>Customer Experience</fullName>
                </value>
                <value>
                    <fullName>Growth</fullName>
                </value>
                <value>
                    <fullName>SPIN success</fullName>
                </value>
                <value>
                    <fullName>Lead Management Success</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Opportunity_Five_Year_Revenue__c</fullName>
        <formula>Opportunity__r.Five_Year_Revenue__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Five Year Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity_Number__c</fullName>
        <formula>Opportunity__r.Opportunity_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Value__c</fullName>
        <formula>Opportunity__r.Amount</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Shows the opportunity name</description>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Highlights / Lowlights</relationshipLabel>
        <relationshipName>Highlights_Lowlights</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Text_and_Pictures__c</fullName>
        <description>to enter text and add pictures</description>
        <inlineHelpText>enter your higlight / lowlight detail  and add pictures if you want</inlineHelpText>
        <label>Text and Pictures</label>
        <length>3000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Highlight</fullName>
                </value>
                <value>
                    <fullName>Lowlight</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>age_in_days__c</fullName>
        <formula>TODAY() - DATEVALUE( CreatedDate )</formula>
        <label>age in days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Highlight / Lowlight</label>
    <listViews>
        <fullName>A_C_Executive_records</fullName>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>NAME</columns>
        <columns>Text_and_Pictures__c</columns>
        <columns>Opportunity__c</columns>
        <columns>Account_Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Important_for__c</field>
            <operation>includes</operation>
            <value>Industrial Executive Management</value>
        </filters>
        <filters>
            <field>Created_by_BU__c</field>
            <operation>equals</operation>
            <value>A&amp;C</value>
        </filters>
        <label>A&amp;C Executive records</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>Account_Name__c</columns>
        <columns>Account_Manager__c</columns>
        <columns>Opportunity__c</columns>
        <columns>Opportunity_Value__c</columns>
        <columns>Opportunity_Number__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>IB_Executive_records</fullName>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>NAME</columns>
        <columns>Text_and_Pictures__c</columns>
        <columns>Opportunity__c</columns>
        <columns>Account_Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Important_for__c</field>
            <operation>includes</operation>
            <value>Industrial Executive Management</value>
        </filters>
        <filters>
            <field>Created_by_BU__c</field>
            <operation>equals</operation>
            <value>IB</value>
        </filters>
        <label>IB Executive records</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>IND_Executive_records</fullName>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>NAME</columns>
        <columns>Text_and_Pictures__c</columns>
        <columns>Opportunity__c</columns>
        <columns>Account_Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Important_for__c</field>
            <operation>includes</operation>
            <value>Industrial Executive Management</value>
        </filters>
        <label>IND Executive records</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>My_HL_LL</fullName>
        <columns>NAME</columns>
        <columns>age_in_days__c</columns>
        <filterScope>Mine</filterScope>
        <label>My HL/LL</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Highlight / Lowlight Headline</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Highlights / Lowlights</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>